[package]
name = "torii-sim-wasm"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "torii_sim_wasm"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module"] }
wasmtime = { version = "36.0.2", features = [ "runtime", "winch", "cranelift", "cache", "wat", "parallel-compilation", "async", "profiling", "all-arch", "pooling-allocator", "demangle", "coredump", "addr2line", "debug-builtins", "component-model", "gc", "threads", "wmemcheck", "incremental-cache", "trace-log", "gc-drc", "gc-null", "stack-switching"] }
